# MaxScale

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  Vagrantfile  build.sh  build_gateway.inc  makefile.inc  rename_packages.sh
Design-Documents/: index.html
Design-Documents/binlog-router-html-docs/: index.html
Design-Documents/contents/: 1_ul_AAAAAAFLWYFm_sl_8kUI3M=.html  1_ul_AAAAAAFLWYFm_sl_8kVS6M=.html  Add DCB to Poll Set_ul_AAAAAAFLXdx36AsUr6Y=.html  Auth OK_ul_AAAAAAFLXeVuoQtwQH4=.html  BUF_ul_PROPERTY_ul_AAAAAAFLTtGkut2ylmQ=.html  Client Connection_ul_AAAAAAFLWoSP0weu564=.html  Client Connection_ul_AAAAAAFLWt_sl_mEwmwgnQ=.html  Client Request Flow_ul_AAAAAAFLWfZr4et8YoI=.html  Collaboration1_ul_AAAAAAFLWfZr4et6HiU=.html  Collaboration2_ul_AAAAAAFLWoSP0weu564=.html  Collaboration3_ul_AAAAAAFLWt_sl_mEgmu0+I=.html  Collaboration4_ul_AAAAAAFLXeSzUwsz_sl_Fs=.html  DCBEventQ_ul_AAAAAAFLSxRjT0wY25I=.html  DCBMM_ul_AAAAAAFLSyEXp5Kp+5Q=.html  DCBSTATS_ul_AAAAAAFLSxp8DWrHPRw=.html  (+481 more)
Search/: index.html
client/: CMakeLists.txt  maxadmin.c
cmake/: CheckPlatform.cmake  FindJemalloc.cmake  FindTCMalloc.cmake  macros.cmake
log_manager/: CMakeLists.txt  log_manager.cc
nbproject/: configurations.xml
query_classifier/: CMakeLists.txt  query_classifier.cc  query_classifier.h
server/core/: dcb.c  (+14 more)
server/modules/monitor/: CMakeLists.txt  Makefile  account_mon.c  account_mon.h  flexmaster_monitor.c  flexmaster_monitor.h  mm_mon.c  mmmon.c
server/modules/routing/readwritesplit/: CMakeLists.txt  Makefile  readwritesplit.c  readwritesplit2.c
utils/: skygw_debug.h
(+827 files in other folders)
