add_library(readwritesplit SHARED readwritesplit.c)
target_link_libraries(readwritesplit ssl pthread log_manager utils query_classifier)
install(TARGETS readwritesplit DESTINATION modules)
add_library(readwritesplit2 SHARED readwritesplit2.c)
target_link_libraries(readwritesplit2 ssl pthread log_manager utils query_classifier)
install(TARGETS readwritesplit2 DESTINATION modules)
if(BUILD_TESTS)
add_subdirectory(test)
endif()
